# vista_eval

./: .gitignore  README.md  commands.md  pyproject.toml  requirements-default.txt  setup.sh  subsampled_patient_summary.txt
configs/: all_tasks.yaml  cls_config.yaml  det_config.yaml  seg_config.yaml
eval/: bq_gcp.sh  gcp.sh  seg_eval.sh  weill.sh
figures/data_stats/: patient_summary.txt  person_id_subsampled.csv  subsampled_patient_summary.txt
figures/results_stats/: all_model_response.csv  results.csv
notebooks/: inspect_early_stage_management_outputs.ipynb  remove_radiology_report.ipynb  run_all-gemma.ipynb  run_all.ipynb
results/medgemma-4b-it/: first_batch_log.txt  medgemma-4b-it_classification_open_VQA.jsonl
src/: run_vlm_eval.py  run_vlm_eval_gemma.py  vqa_dataset.py
src/data_tools/: bigquery_info.py  gs_read_cost.sh
src/data_tools/OMOP_meds_query/: get_report_note.py  get_report_note_v1_2.py  meds_get_report_note.py  remove_imaging_report.py  test_meds_tools.py
src/models/: __init__.py  base.py  gemma3.py  internvl3_5.py  lingshu.py  llava.py  llava_med.py  medvlm.py  octomed.py  qwen2.py  qwen3.py
src/results/: all_model_response.py  check_results.py  constrained_all_model_response.py  final_metrics.py  results_analyzer.py
src/retrieval/: __init__.py  format_events.py  iterative_retrieval.py  keyword_prompts.py  local_retriever.py  test_retrieval_single_patient.py
src/scratch/: csv_columns.py  ct_scan_avail.py  ct_scan_avail_sampled.py  subsample_csv.py
src/tests/: ct_test.py
src/vista_run/: inference_orchestrator.py  run.py  run_bq.py
(+42 files in other folders)
